--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <h5><a href="documents/jflahertyVitaetech.pdf" target="blank" </i>Download My Resume</a></h5>
         </div>
 
-        <div class="col-md-5 col-md-offset-1">
+        <div class="col-md-3 col-md-offset-1">
           <p><img src="img/portfoliobw.jpg" alt="" class="img-responsive img-circle"></p>
         </div>
       </div>
@@ -174,14 +174,13 @@
     <div class="container clearfix">
       <div class="row">
         <div class="col-md-6">
-          <div class="card" id="social">
-
+          <div class="card" id="social" align="left">
 
             <h2 class="heading">Contact Me</h2>
 
             <div class="col-md-2">
               <p class="social">
-                <div class="box"><a href="https://www.linkedin.com/in/jeannie-flaherty-369427122/" title="" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                <div class="box" ><a href="https://www.linkedin.com/in/jeannie-flaherty-369427122/" title="" class="linkedin"><i class="fa fa-linkedin"></i></a>
                 </div>
               </p>
             </div>
