--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body data-spy="scroll" data-target="#navigation" data-offset="100">
   <!-- intro-->
-  <section id="intro" style="background-image: url('img/utcarolina.jpg');" class="intro">
+  <section id="intro" style="background-image: url('img/utcarolina.jpg')" class="intro">
     <div class="overlay"></div>
     <div class="content">
       <div class="container clearfix">
@@ -230,8 +230,8 @@
 
   <script>
     window.jQuery ||
-      document.write('<script src="js/jquery-1.11.0.min.js">
-  </script>');
+      document.write(<script src="js/jquery-1.11.0.min.js">
+  </script>
   </script>
 
   <!-- Bootstrap CDN-->
