fix bootstrap link

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
   </script>
 
   <!-- Bootstrap CDN-->
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <!-- jQuery Cookie - For Demo Purpose-->
   <script src="js/jquery.cookie.js"></script>
   <!-- Lightbox-->
