--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
   <script>
     window.jQuery ||
-      document.write(<script src="js/jquery-1.11.0.min.js">
+      document.write(<script src="js/jquery-1.11.0.min.js">)
   </script>
   </script>
 
