--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
           <div class="navbar-header">
             <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-btn btn-sm navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
             <a href="#intro" class="navbar-brand scroll-to">
-
           </div>
+
           <div id="navigation" class="collapse navbar-collapse navbar-right">
             <ul class="nav navbar-nav">
               <li class="active"><a href="#intro">Home</a></li>
@@ -230,8 +230,8 @@
 
   <script>
     window.jQuery ||
-      document.write(<script src="js/jquery-1.11.0.min.js">)
-  </script>
+      document.write('<script src="js/jquery-1.11.0.min.js">
+  </script>');
   </script>
 
   <!-- Bootstrap CDN-->
