--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </section>
   <!-- intro end-->
   <!-- <navbar> -->
-  <header class="header">
+  <!-- <header class="header">
     <div class="sticky-wrapper">
       <div role="navigation" class="navbar navbar-default">
         <div class="container">
@@ -67,21 +67,10 @@
               <li><a href="#contact">Contact</a></li>
             </ul>
           </div>
-          <!-- <nav>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Logo</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </div>
-  </nav> -->
         </div>
       </div>
     </div>
-  </header>
+  </header> -->
   <!-- </.navbar> -->
   <!-- about-->
   <section id="about" class="text" style="background-color: #d3e8e1">
@@ -101,7 +90,7 @@
           <p>In my spare time, when I'm not solving elusive web development puzzles, I enjoy time with my supportive husband and three dogs. Fun for me is to train and compete in canine agility. </p>
           <br>
 
-          <h5><a href="documents/jflahertyVitaetech1.pdf" target="blank" </i>Download My Resume</a></h5>
+          <h5><a href="documents/jflahertyV1.pdf" target="blank" </i>Download My Resume</a></h5>
         </div>
 
         <div class="col-md-3 col-md-offset-1">
