--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body data-spy="scroll" data-target="#navigation" data-offset="100">
   <!-- intro-->
-  <section id="intro" style="background-image: url('img/utcarolina.jpg')" class="intro">
+  <section id="intro" style="background-image: url('img/kayak.jpg')" class="intro">
     <div class="overlay"></div>
     <div class="content">
       <div class="container clearfix">
