--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
         <div class="col-md-6">
           <h2 class="heading">About me</h2>
           <p class="lead"></p>
-          <p>I am a Full Stack Web Developer and am currently searching for a position that will allow me to sharpen my coding skills, work in an agile environment and produce a product I am invested in. While attending a Bootcamp for coding, I have been
-            concurrently finishing my MA in Human Dimensions of Organizations at the University of Texas. Prior to that, I earned my BS in Zoology, a BA in Liberal Arts with a minor in Computer Science. I have spent almost 30 years in patient care with
+          <p>I am a Full Stack Web Developer who is currently searching for a position within a company that subscribes to the AGILE methodology, will sharpen my coding skills, and produce a product I am invested in. While attending a Bootcamp for coding, I
+            concurrently finished my MA in Human Dimensions of Organizations at the University of Texas. Prior to that, I earned my BS in Zoology, a BA in Liberal Arts with a minor in Computer Science. In my previous life I served in an allied health care field with
             a focus on pediatrics. During this time, I learned that while patient management is widely researched and explained, leadership in healthcare begs for more exploration.</p>
 
-          <p>This has brought me to my studies at the University of Texas where I hope to translate my new understanding about organizations and the ethical, psychological and sociological way we treat our employees into a more productive and engaged workforce.
+          <p>My studies at the University of Texas have lead me back to my first interest in technology where I hope to translate my new understanding about organizations and the ethical, psychological and sociological way we treat our employees into a more productive and engaged workforce.
             While allied health is where I have honed my skills in human relations, I am making a shift into technology to allow further growth and learning potential. I love solving problems and helping others relate to change with a positive reflection
             on the future. I am excited to learn more and practice Agile Development as the communication aspect of this practice leads right into my wheelhouse.</p>
 
