--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="col-md-6">
           <h2 class="heading">About me</h2>
           <p class="lead"></p>
-          <p>I am a Full Stack Web Developer who is currently searching for a position within a company that subscribes to the AGILE methodology, will sharpen my coding skills, and produce a product I am invested in. While attending a Bootcamp for coding, I
+          <p>I am a Full Stack Web Developer who is currently searching for a position within a company that subscribes to the AGILE methodology, will sharpen my coding skills, and produces a product I am invested in. While attending a Bootcamp for coding, I
             concurrently finished my MA in Human Dimensions of Organizations at the University of Texas. Prior to that, I earned my BS in Zoology, a BA in Liberal Arts with a minor in Computer Science. In my previous life I served in an allied health care field with
             a focus on pediatrics. During this time, I learned that while patient management is widely researched and explained, leadership in healthcare begs for more exploration.</p>
 
@@ -237,7 +237,7 @@
   <script>
     window.jQuery ||
       document.write('<script src="js/jquery-1.11.0.min.js">
-  </script>');
+  </script>
   </script>
 
   <!-- Bootstrap CDN-->
