change in cover photo name

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <br><br>
       </div>
     </div>
-    <div class="parallax"><img src="img/P9070251.jpg" alt=""></div>
+    <div class="parallax"><img src="img/mendenhall.jpg" alt=""></div>
   </div>
 
   <section id="aboutme">
