--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 <body>
   <div class="navbar-fixed">
-    <nav class="white" role="navigation">
-      <div class="nav-wrapper container">
+    <nav class="teal lighten-2 white-text" role="navigation">
+      <div class="nav-wrapper container ">
         <a id="logo-container" href="#" class="brand-logo"></a>
         <ul class="right hide-on-med-and-down">
           <li><a href="#">Home</a></li>
