--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
   <div class="navbar-fixed">
-    <nav class="teal lighten-2 white-text" role="navigation">
+    <nav class="teal lighten-2" role="navigation">
       <div class="nav-wrapper container ">
         <a id="logo-container" href="#" class="brand-logo"></a>
         <ul class="right hide-on-med-and-down">
@@ -54,7 +54,7 @@
 
       <div class="row">
         <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
+          <h3><i class="mdi-content-send grey-text"></i></h3>
           <h4>About Me</h4>
         </div>
       </div>
@@ -196,7 +196,7 @@
       <div class="container">
       </div>
     </div>
-    <div class="parallax"><img src="img/kayak.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="img/kayak.jpg" alt=""></div>
   </div>
 
   <footer class="page-footer teal lighten-2">
