description of technology in projects

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <!-- <span class="card-title">Card Title</span> -->
             </div>
             <div class="card-content">
-              <p>A website exploring the Leadership Literature in Orthotics and Prosthetics</p>
+              <p>A website exploring the Leadership Literature in Orthotics and Prosthetics. Built on React.js, HTML, CSS and JavaScript. MongoDB holds comments input by user.</p>
             </div>
             <div class="card-action">
               <a href="https://uthdo2017.herokuapp.com/">Live Site</a>
@@ -119,7 +119,7 @@
               <!-- <span class="card-title">Card Title</span> -->
             </div>
             <div class="card-content">
-              <p>Team project integrating 3 API's</p>
+              <p>A collaborative application using the Google Maps, Refuge Restrooms and PlacesILive API's to locate gender neutral, restrooms in the San Francisco area.</p>
               <br>
             </div>
             <div class="card-action">
@@ -134,7 +134,7 @@
               <!-- <span class="card-title">Card Title</span> -->
             </div>
             <div class="card-content">
-              <p>A game in JavaScript</p>
+              <p>A game in JavaScript: Accumulate points without going over the limit!</p>
               <br>
             </div>
             <div class="card-action">
@@ -149,10 +149,9 @@
           <div class="card medium">
             <div class="card-image">
               <img src="img/traintime.png">
-              <!-- <span class="card-title">Card Title</span> -->
             </div>
             <div class="card-content">
-              <p>Calculates train arrival time using moment.js and calculations in JavaScript</p>
+              <p>Calculates train arrival time using Moment.js and Firebase. Calculates train arrival time. Built with JavaScript, HTML and CSS.</p>
             </div>
             <div class="card-action">
               <a href="https://jf-utex.github.io/trainTime/">Live Site</a>
@@ -163,10 +162,9 @@
           <div class="card medium">
             <div class="card-image">
               <img src="img/burger app.png">
-              <!-- <span class="card-title">Card Title</span> -->
             </div>
             <div class="card-content">
-              <p>A website exploring the Leadership Literature in Orthotics and Prosthetics</p>
+              <p>Use of HTML, CSS, Twitter Bootstrap, MSQL, MVC and Handlebars</p>
             </div>
             <div class="card-action">
               <a href="https://warm-beach-51608.herokuapp.com/">Live Site</a>
