--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
                 <br>
                 <div> Jeannie Flaherty - Full Stack Developer</div>
                 <div>Phone: <span class="tel">(737)222-0016</span></div>
+                <div>Email: <span class="Email">jflaherty@utexas.edu</span></div>
               </div>
             </div>
           </div>
